# RAG-PDF-CHATBOT

./: .gitignore  README.md  app.py  file.ipynb  main.py  project.ipynb  project2.ipynb  pyproject.toml  requirements.txt
src/: config.py  document_loader.py  rag_system.py  retriever.py  saver.py  text_processor.py  vector_store.py
tests/: test_rag.py
