[project]
name = "airag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.1",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "notebook>=7.0.0",
    "pylance>=0.38.2",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.1",
    "sentence-transformers>=5.1.1",
]
